@@ -39,6 +39,7 @@
 - Unit tests: Updated test.sh to set default device-type to CPU with Apple Intel and added -f (--force) option
 - OpenCL Backend: moved functions to ext_OpenCL.c and includes to ext_OpenCL.h
 - HIP Backend: moved functions to ext_hip.c/ext_hiprtc.c and includes to ext_hip.h/ext_hiprtc.h
+- Autotune: Added error handling. By default skipping device on error, with --force using accel/loops/threads min values instead
 
 * changes v6.2.4 -> v6.2.5
 
